fix alignment

--- a/src/sql/workbench/contrib/dataExplorer/browser/media/connectionViewletPanel.css
+++ b/src/sql/workbench/contrib/dataExplorer/browser/media/connectionViewletPanel.css
@@ -100,7 +100,6 @@
 .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content.server-group,
 .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content.server-group > .server-group {
 	padding-left: 5px;
-	overflow: hidden;
 }
 
 .monaco-tree .monaco-tree-rows > .monaco-tree-row > .content.server-group {
